<resources>
    <string name="school_phone">ph.no.: 9852029097</string>
    <string name="school_name">Moonlight Model English Academy</string>
    <string name="school_address">Ratuwamai-04, Aambari</string>
    <string name="school_estd">estd: 2059</string>
    <string name="app_name">Moonlight Model Student</string>
    <string name="std_id_card">Indentity  Card</string>
    <string name="developer_name">Rohan Adhikari</string>
    <string name="dev">Developer</string>


    <!--    Profile id card-->
    <string name="id_class">Class :</string>
    <string name="id_section">Section :</string>
    <string name="id_gender">Gender :</string>
    <string name="id_dob">DOB :</string>
    <string name="id_valid">Valid upto :</string>
    <string name="id_help">"यो परिचय-पत्र कसैले पयेमा सम्बन्धित विद्यालय , जिल्ल प्रशासन कर्यलय वा प्रहरी कर्यलयमा बुझाई दिनुहोला"</string>
    <!--    SPlash SCreen-->
    <string name="login_text">Log In</string>
    <string name="login_btn">login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="scanqr">Scan QR</string>
    <string name="nointernet">! No internet connection.</string>


    <!--    Dashboard-->
    <string name="dash_frag">Dashboard</string>
    <string name="prof_frag">Profile</string>
    <string name="pay_frag">Payments</string>
    <string name="learn_frag">E-learning</string>
    <string name="calen_frag">Calendar</string>
    <string name="img_menus">Menus</string>

    <string name="notification">Notifications</string>

    <string name="more">More</string>
    <string name="settings">Settings</string>
    <string name="abt_dev">About Developers</string>
    <string name="change_pass">Change Password</string>
    <string name="logout">Log Out</string>


    <!--    Dashboard frag-->
    <string name="online_class">Online Class</string>
    <string name="online_exam">Online Exam</string>
    <string name="time_table">Time Table</string>
    <string name="attn">Attendance</string>
    <string name="exams">Exams</string>
    <string name="homework">Homework</string>
    <string name="leaves">Leaves</string>
    <string name="note">Notes</string>
    <string name="complain">Complain</string>
    <string name="noticeandannounce">Notice And Announcements</string>
    <!--    payment frag-->
    <string name="payments">Payments</string>
    <string name="credit_bill">Credit Bills</string>
    <string name="statement">Statement</string>
    <string name="due_sum">Due Summary</string>

    <!--    scanner-->
    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>


    <!--    Content Description-->

    <!--    Splash Screen-->
    <string name="Splash_logo">APP LOGO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="id_phone">Phone :</string>
    <string name="id_address">Address :</string>
    <string name="id_guardian">Guardian Name :</string>
    <string name="id_father">Father Name :</string>
    <string name="id_mother">Mother Name :</string>
    <string name="id_email">"Email: "</string>
    <string name="id_bus_location">Bus Location :</string>
    <string name="oops">OOPS!</string>
    <string name="page_under_construction">This page is Under Construction!</string>
    <string name="unavailable">Unavailable</string>
    <string name="view_more">View More</string>
    <string name="ok_got_it">Ok Got It</string>
    <string name="result">Result</string>
    <string name="upcoming">Upcoming</string>
    <string name="title_activity_result">Result</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="year">Year</string>
</resources>