<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="10dp"
    android:background="@drawable/white_gradient_bg"
    tools:context=".ui.fragments.Profile_Card_View">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="240dp"
        android:background="@drawable/identy_card_bg_top">

        <TextView
            android:id="@+id/schoolname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="10dp"
            android:textSize="17sp"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:text="@string/school_name"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/schooladdress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="1dp"
            android:layout_below="@+id/schoolname"
            android:textSize="14sp"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:text="@string/school_address"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"/>

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/schoolname"
            android:src="@drawable/ic"
            android:background="@drawable/circle_wih_white_border"
            android:layout_toStartOf="@+id/schooladdress"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/schoolphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginEnd="1dp"
            android:layout_below="@+id/schooladdress"
            android:textSize="12sp"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:text="@string/school_phone"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"/>

        <TextView
            android:id="@+id/schooleestd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_below="@+id/schoolphone"
            android:textSize="11sp"
            android:textAllCaps="true"
            android:layout_centerHorizontal="true"
            android:text="@string/school_estd"
            android:fontFamily="sans-serif-black"
            android:textColor="@color/white"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/schooleestd"
            android:layout_marginTop="9dp"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:textAllCaps="true"
            android:text="@string/std_id_card"
            android:textColor="@color/green"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-87dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="130dp"
            android:src="@drawable/ic_person"
            android:background="@drawable/corner_border"
            android:contentDescription="@string/prof_frag" />

        <TextView
            android:id="@+id/studentname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/red"
            android:text="@string/developer_name"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:fontFamily="serif"/>

        <TextView
            android:id="@+id/studentpost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black"
            android:text="@string/dev"
            android:layout_gravity="center_horizontal"
            android:textSize="15sp"
            android:fontFamily="@font/lato"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_class"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/prime"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/studentclass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_section"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/prime"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/studentsection"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_gender"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/prime"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/studentgender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_dob"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/prime"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/studentdob"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id_valid"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:textColor="@color/prime"
                    android:fontFamily="sans-serif"/>

                <TextView
                    android:id="@+id/identyvaliddate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:fontFamily="@font/lato"/>
            </LinearLayout>


        </LinearLayout>
        <ImageView
            android:id="@+id/studentqrview"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="12dp"
            android:layout_marginStart="18dp"
            android:contentDescription="@string/prof_frag" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:padding="10dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/profile_card_buttom"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:text="@string/id_help"
        android:fontFamily="sans-serif-black"/>

</LinearLayout>