<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".ui.fragments.menus">

    <LinearLayout
        android:id="@+id/toolbarmenus"
        android:layout_height="60dp"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:background="@color/white">

        <TextView
            android:id="@+id/backmenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textSize="21sp"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="10dp"
            android:textColor="@color/black"
            android:text="@string/more"
            android:drawablePadding="10dp"
            app:drawableStartCompat="@drawable/ic_back"
            app:drawableTint="@color/black" />

    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="13dp"
        android:background="@color/white"
        android:layout_below="@id/toolbarmenus"
        app:cardCornerRadius="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/setting"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/settings"
                android:gravity="center_vertical"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:drawablePadding="12dp"
                app:drawableTint="@color/prime"
                app:drawableStartCompat="@drawable/ic_settings" />

            <TextView
                android:id="@+id/developer"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/abt_dev"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:drawablePadding="12dp"
                app:drawableTint="@color/prime"
                app:drawableStartCompat="@drawable/ic_developer" />

            <TextView
                android:id="@+id/changepass"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/change_pass"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:drawablePadding="12dp"
                app:drawableTint="@color/prime"
                app:drawableStartCompat="@drawable/ic_key" />

            <TextView
                android:id="@+id/logout"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:text="@string/logout"
                android:gravity="center_vertical"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:drawablePadding="12dp"
                app:drawableTint="@color/prime"
                app:drawableStartCompat="@drawable/ic_logout" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/versionview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textColor="@color/black"
        android:layout_marginBottom="10dp"
        android:textSize="16sp"/>

</RelativeLayout>